[package]
name = "pingas"
version = "0.1.0"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
image = "0.22.3"
tokio = "0.1.22"
tokio-ping = "0.3.0"
