[package]
name = "pingas"
description = "A Jinglepings pinger"
version = "0.1.0"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
fastping-rs = "0.1.4"
image = "0.22.3"
